--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://t3.ftcdn.net/jpg/04/37/56/48/360_F_437564804_9i2iMQl65goueDniemeb7ae6iiq1yFmy.jpg"
-    />
+    <link rel="icon" type="image/png" href="./logobg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Cinzel+Decorative:wght@400;700;900&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=DynaPuff:wght@400..700&family=Funnel+Display:wght@300..800&family=Happy+Monkey&family=Heebo:wght@100..900&family=Indie+Flower&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Petit+Formal+Script&family=Poiret+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&family=Slackey&display=swap"
       rel="stylesheet"
     />
-    <title>Passion, purpose, progress</title>
+    <title>Intellectual Progress Star | CRM</title>
   </head>
   <body>
     <div id="root"></div>
