--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Cinzel+Decorative:wght@400;700;900&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=DynaPuff:wght@400..700&family=Funnel+Display:wght@300..800&family=Happy+Monkey&family=Heebo:wght@100..900&family=Indie+Flower&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Petit+Formal+Script&family=Poiret+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&family=Slackey&display=swap"
     rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Numans&display=swap" rel="stylesheet">
   <title>Intellectual Progress Star | CRM</title>
 </head>
 
