--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Numans&display=swap" rel="stylesheet">
-  <title>Intellectual Progress Star | CRM</title>
+  <title>Intellectual Progress Star</title>
 </head>
 
 <body>
